cleaned up the code and reorganized some functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "plane.h": "c",
         "brushclipper.h": "c",
         "triangle.h": "c",
-        "polygon.h": "c"
+        "polygon.h": "c",
+        "utils.h": "c"
     }
 }
