--- a/GameConfig.cfg
+++ b/GameConfig.cfg
@@ -1,6 +1,6 @@
 {
 	"version": 8,
-	"name": "qengine",
+	"name": "skyesrc",
 	"icon": "icon.png",
 	"fileformats": [
         { "format": "Valve" },
