--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,8 @@
         "__node_handle": "c",
         "collisionbox.h": "c",
         "raymath.h": "c",
-        "gameobject.h": "c"
+        "gameobject.h": "c",
+        "event.h": "c",
+        "entity.h": "c"
     }
 }
