migrated to sdl and implemented occlusion culling on map geometry

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,8 @@
         "lights.h": "c",
         "draw_viewmodel.h": "c",
         "player.h": "c",
-        "draw_gui.h": "c"
+        "draw_gui.h": "c",
+        "math.h": "c",
+        "frustum.h": "c"
     },
 }
