--- a/GameConfig.cfg
+++ b/GameConfig.cfg
@@ -11,7 +11,7 @@
         "packageformat": { "extension": ".pak", "format": "idpak" }
     },
 	"textures": {
-		"root": "textures",
+		"root": "gamedata/textures",
 		"extensions": [".bmp", ".exr", ".hdr", ".jpeg", ".jpg", ".png", ".tga", ".webp"],
 		"excludes": [ "*_albedo", "*_ao", "*_emission", "*_height", "*_metallic", "*_normal", "*_orm", "*_roughness", "*_sss" ]
 	},
